welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:14: error: not found: value prendreBiscuit
prendreBiscuit()
^